--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-us">
 <head>
     <meta charset="UTF-8">
     <title>Latitude</title>
-    <h1 style="color:rgb(204, 176, 19);">Latitude and The Weather</h1>
-<body style="background-color:powderblue;">
+    <h1 style="color:rgb(114, 67, 245);">Latitude and Weather</h1>
+<body style="background-color:rgb(245, 248, 209);">
 <head>
 <style>
 ul {
@@ -14,5 +14,35 @@ ul {
 }
 </style>
 </head>
-<body>
+</body>
 <ul>
+      <li><a href="temperature.html">Temperature</a></li>
+      <li><a href="cloudiness.html">Cloudiness</a></li>
+      <li><a href="humidity.html">Humidity</a></li>
+      <li><a href="windspeed.html">Windspeed</a></li>
+      <li><a href="Comparisons.html">Comparisons</a></li>
+      <li><a href="#Data.html">Data</a></li>
+</ul>
+
+</body>
+</html>
+<h1 style="color:rgb(204, 176, 19);">Visualizations</h1>
+
+</a>
+<a href="temperature.html">
+<img src="Resources/assets/images/Fig1.png" class="rounded float-left thumbnail" alt="Latitude vs Temperature">
+</a>
+<a href="humidity.html">
+<img src="Resources/assets/images/Fig2.png" class="rounded float right thumbnail" alt="Latitude vs Humidity">
+</a>
+<a href="cloudiness.html">
+<img src="Resources/assets/images/Fig3.png" class="rounded float-left  thumbnail" alt="Latitude vs cloudiness">
+</a>
+<a href="windspeed.html">
+<img src="Resources/assets/images/Fig4.png" class="rounded float right  thumbnail" alt="Latitude vs windspeed">
+<body>
+
+
+</body>
+
+</html>
